--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
           <li><a href="#incidents" id="toc-incidents">Incidents</a></li>
           </ul></li>
           </ul></li>
-          <li><a href="#navdeeps-additional-information"
-          id="toc-navdeeps-additional-information">Navdeep’s additional
+          <li><a href="#additional-information"
+          id="toc-additional-information">Additional
           Information</a></li>
           </ul>
         </div>
@@ -237,8 +237,8 @@
                 2</a> - <a
                 href="https://www.youtube.com/watch?v=30LlBRyCajw">Saravana
                 Decodes</a></p>
-                <h1 id="navdeeps-additional-information">Navdeep’s
-                additional Information</h1>
+                <h1 id="additional-information">Additional
+                Information</h1>
                 <p>Recently, the Indian government faced significant
                 pressure as the country experienced its largest protest
                 concerning new farm laws. Farmers from various states
